force-app/main/default/objects/JMS_Broker_Call_Staging__c/JMS_Broker_Call_Staging__c.object-meta.xml
<CustomObject>
    <label>Broker Call Staging</label>
    <nameField>
        <displayFormat>BS-{000000000}</displayFormat>
        <label>Broker Call Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Call Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>