force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Account__c.field-meta.xml
<CustomField>
    <fullName>JMS_Account__c</fullName>
    <formula>IF( ISBLANK( JMS_Account_SF_Id__c ) , &apos;&apos;,HYPERLINK(JMS_Account_SF_Id__c , JMS_Company_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>