force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Annual_Case_Volume__c.field-meta.xml
<CustomField>
    <fullName>JMS_Annual_Case_Volume__c</fullName>
    <description>Annual Case Volume</description>
    <label>Annual Case Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>