force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Broker_Call__c.field-meta.xml
<CustomField>
    <fullName>JMS_Broker_Call__c</fullName>
    <formula>IF( ISBLANK( JMS_Broker_Call_SF_Id__c ) , &apos;&apos;,HYPERLINK( JMS_Broker_Call_SF_Id__c  ,  JMS_Broker_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Call</label>
    <type>Text</type>
</CustomField>