force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Broker_Call_Batch_Job__c.field-meta.xml
<CustomField>
    <fullName>JMS_Broker_Call_Batch_Job__c</fullName>
    <label>Broker Call Batch Job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>