force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Broker_Name__c</fullName>
    <description>Broker Name</description>
    <label>Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>