force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Call_Comments__c.field-meta.xml
<CustomField>
    <fullName>JMS_Call_Comments__c</fullName>
    <description>Call Comments</description>
    <label>Call Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>