force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>JMS_Call_Date__c</fullName>
    <description>Date of call</description>
    <label>Call Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>