force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Call_Distributor__c.field-meta.xml
<CustomField>
    <fullName>JMS_Call_Distributor__c</fullName>
    <formula>IF( ISBLANK(JMS_Call_Distributor_SF_Id__c) , &apos;&apos;,HYPERLINK(JMS_Call_Distributor_SF_Id__c, JMS_Call_Distributor_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Distributor</label>
    <type>Text</type>
</CustomField>