force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Call_Distributor_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Call_Distributor_SF_Id__c</fullName>
    <label>Call Distributor SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>