force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>JMS_Call_Status__c</fullName>
    <description>Status of Call</description>
    <label>Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>