force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Campaign_Name__c</fullName>
    <description>Campaign Name</description>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>