force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Campaign_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Campaign_SF_Id__c</fullName>
    <label>Campaign SF Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>