force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_Address__c</fullName>
    <description>Company Address</description>
    <label>Company Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>