force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Company_City__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_City__c</fullName>
    <description>City</description>
    <label>Company City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>