force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_Name__c</fullName>
    <description>Company Name</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>