force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_Phone__c</fullName>
    <description>company_phone</description>
    <label>Company Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>