force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Company_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_SF_Id__c</fullName>
    <description>Company SF Id</description>
    <label>Company SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>