force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Company_State__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_State__c</fullName>
    <description>Company State</description>
    <label>Company State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>