force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Contact__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact__c</fullName>
    <formula>IF( ISBLANK( JMS_Contact_SF_Id__c ) , &apos;&apos;,HYPERLINK(  JMS_Contact_SF_Id__c ,  JMS_Contact_Title__c &amp; &apos; &apos; &amp;  JMS_Contact_First_Name__c &amp;&apos; &apos; &amp;JMS_Contact_Last_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>