force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact_Email__c</fullName>
    <description>Email Id</description>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>