force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Contact_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact_Error_Message__c</fullName>
    <description>All them Contact error messages will be stored in this field</description>
    <label>Contact Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>