force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact_First_Name__c</fullName>
    <description>Name</description>
    <label>Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>