force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact_Phone__c</fullName>
    <description>Phone</description>
    <label>Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>