force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Contact_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact_SF_Id__c</fullName>
    <description>Will hold the existing Contact SF ID found with the Fuzzy Match</description>
    <label>Contact SF Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>