force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>JMS_Item_Description__c</fullName>
    <description>Item Description</description>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>