force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Item_No_Sale_Reason__c.field-meta.xml
<CustomField>
    <fullName>JMS_Item_No_Sale_Reason__c</fullName>
    <description>Item No Sale Reason</description>
    <label>Item No Sale Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>