force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Kickout_Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>JMS_Kickout_Failed_Reason__c</fullName>
    <label>Kickout Failed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>