force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Opportunity_id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Opportunity_id__c</fullName>
    <description>Id of Opportunity</description>
    <label>Opportunity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>