force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Opportunity_stage__c.field-meta.xml
<CustomField>
    <fullName>JMS_Opportunity_stage__c</fullName>
    <description>Stage of Opportunity</description>
    <label>Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>