force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Product__c.field-meta.xml
<CustomField>
    <fullName>JMS_Product__c</fullName>
    <formula>IF( ISBLANK(JMS_Product_SF_Id__c) , &apos;&apos;, HYPERLINK( JMS_Product_SF_Id__c ,   JMS_Item_Description__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>