force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Salesperson_Email__c.field-meta.xml
<CustomField>
    <fullName>JMS_Salesperson_Email__c</fullName>
    <label>Salesperson Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>