force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Status__c.field-meta.xml
<CustomField>
    <fullName>JMS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>