force-app/main/default/objects/JMS_Broker_Call_Staging__c/fields/JMS_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>JMS_Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>