force-app/main/default/objects/JMS_Broker_Call_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JMS_Broker_call_id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>JMS_Kickout_Failed_Reason__c</columns>
    <columns>JMS_Record_Processed__c</columns>
    <columns>JMS_Status__c</columns>
    <columns>JMS_Opportunity_stage__c</columns>
    <columns>JMS_Item_Status__c</columns>
    <columns>JMS_Item_No_Sale_Reason__c</columns>
    <columns>JMS_Broker_Name__c</columns>
    <columns>JMS_Company_Name__c</columns>
    <columns>JMS_Item_Number__c</columns>
    <columns>JMS_Company_Broker_Territory_Name__c</columns>
    <columns>JMS_Campaign_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>